# adversarial-robustness

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.voice_backup/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  metadata.tex
configs/: config.yaml
frontend/: app.py  sample_images.pt
overleaf/: README.md  epoka.cls  metadata.tex  references.bib  thesis.tex
overleaf/chapters/: appendixA.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex
results/: cw_l2.json  deepfool_panel_data.pt  hopfield_defense.json  hopskipjump_l2.json  one_pixel.json  pgd_reliability.json  psnr_ci.json  transfer.json
results/one_pixel_images/: adv_k1.pt  adv_k3.pt  adv_k5.pt  clean.pt  clean_pred.pt  labels.pt  meta.json
scripts/: compute_psnr_ci.py  deploy_hf.py  evaluate.py  evaluate_blackbox.py  evaluate_cw.py  evaluate_transfer.py  hopfield_defense.py  make_bw_figures.py  make_confusion_matrices.py  make_cw_figure.py  make_dataset_figure.py  make_deepfool_panel.py  make_op_example.py  make_schematic.py  make_training_curves.py  make_transfer_figure.py  reliability_pgd.py  save_one_pixel_images.py  train.py
src/api/: main.py
src/attacks/: cw.py  deepfool.py  fgsm.py  hopskipjump.py  one_pixel.py  pgd.py
src/models/: resnet.py
src/training/: adversarial.py  standard.py
src/utils/: data.py  metrics.py
tests/: test_attacks.py
